--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ adminassets/img/
 adminassets/styles/
 application/libraries/tcpdf/tcpdf_6_2_13.zip
 application/libraries/tcpdf/fonts/
-application/assets/category/
-application/assets/images/
+assets/category/
+assets/images/
+assets/samples/
