--- a/application/views/tailor/layout/.htaccess
+++ b/application/views/tailor/layout/.htaccess
@@ -60,7 +60,7 @@
 
 
 <!-- Web Fonts  -->
-<!--<link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800%7CShadows+Into+Light" rel="stylesheet" type="text/css">-->
+<!--<link href=https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800%7CShadows+Into+Light" rel="stylesheet" type="text/css">-->
 <!-- Icon Fonts  -->
 <link rel="stylesheet" href="assets/templates/welldone-html5/font/styleedd7.css?vcart=7.2.4">
 <!-- Vendor CSS -->
